# FinalStateEstimation

./: .gitmodules  CMakeLists.txt  README.md  slidingwindowfilter.cpp
include/: dataframe.hpp  map.hpp  odometry.hpp  trajectory.hpp  voxel.hpp
include/odometry/: lidarinertialodometry.hpp  lidarodometry.hpp
include/utils/: stopwatch.hpp
notes/: notes.txt
src/odometry/: lidarinertialodometry.cpp  lidarodometry.cpp
